<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HomepageActivity">


    <ImageView
        android:id="@+id/headerimage"
        android:layout_width="280dp"
        android:layout_height="108dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cimke2" />
    <Button
        android:id="@+id/button2"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginBottom="440dp"
        android:backgroundTint="@color/darkgreen"
        android:onClick="refresh"
        android:text="@string/HomePageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginBottom="352dp"
        android:backgroundTint="@color/darkgreen"
        android:onClick="goToContactPage"
        android:text="@string/contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/darkgreen"
        android:onClick="goToAppointment"
        android:text="@string/appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="239dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/darkgreen"
        android:onClick="logout"
        android:text="@string/logOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>