<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="239dp"
        android:layout_height="41dp"
        android:layout_marginBottom="12dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerimage"
        app:layout_constraintVertical_bias="0.63"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/headerimage"
        android:layout_width="280dp"
        android:layout_height="108dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cimke2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="364dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436">


        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="265dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="265dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/phoneNum"
            android:inputType="phone"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/darkgreen"
        android:onClick="register"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="cancel"
        android:backgroundTint="@color/darkgreen"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>