<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/background">

    <RelativeLayout
        android:layout_width="393dp"
        android:layout_height="188dp">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />


        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-1dp"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:layout_alignParentStart="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="28dp"
            android:padding="8dp"
            android:text="@string/desc" />
        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemImage"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="118dp"
            android:layout_marginEnd="134dp"
            android:layout_marginBottom="27dp"
            android:backgroundTint="@color/darkgreen"
            android:text="@string/add_appointment" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>
